// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment renders mocks as expected for:  Erika Wolfe 1`] = `
"<div className=\\"Comment\\">
  <div className=\\"title\\">
    <span>
      Nightmare experience - no product, no communication, no refund; improved by rapid resolution
    </span>
    <span className=\\"rating\\">
      ★★☆☆☆
    </span>
  </div>
  <div className=\\"sub-title\\">
    <span>
      Erika Wolfe - Gothenburg, SE
    </span>
  </div>
  <div className=\\"body\\">
    <p>
      In early 2012, I ordered a set of chairs from Infurn. I thought that by ordering in March, I would have what I needed by November, certainly. I wanted the perfect chairs for my house, and really did not NEED them before the annual Thanksgiving dinner (the only time of year I have a need for a whole lot of chairs at one time). I played it safe, I thought, by ordering so far in advance.
      Week after week,
      month after month,
      Infurn &#39;s website kept updating the status of the order so that the chairs&#39;
      arrival would be further and further in the distant future.Finally when the week of Thanksgiving arrived,
      and I had had contact with their customer service in early November(and their only clueless reply was to say, &#39;We had manufacturing problems; let&#39;
      s hope the chairs arrive this week as scheduled.
      &#39;), I still had no chairs, had to go out and buy some other chairs and still had no clue when the Infurn chairs might arrive.
      At some point I
      finally just requested a refund because Infurn could neither deliver my chairs nor give me a solid date about when I might receive them when I inquired about a delivery date.They
      finally offered me a refund - which I accepted on 14 December 2012. 
    </p>
  </div>
</div>"
`;

exports[`Comment renders mocks as expected for:  Gav 1`] = `
"<div className=\\"Comment\\">
  <div className=\\"title\\">
    <span>
      Princely Sum
    </span>
    <span className=\\"rating\\">
      ★★★★☆
    </span>
  </div>
  <div className=\\"sub-title\\">
    <span>
      Gav
    </span>
  </div>
  <div className=\\"body\\">
    <p>
      A decent local curry house in Faversham, Kent known for its Elvis nights.
    </p>
  </div>
</div>"
`;

exports[`Comment renders mocks as expected for:  Hugo Beja 1`] = `
"<div className=\\"Comment\\">
  <div className=\\"title\\">
    <span>
      FRAUD
    </span>
    <span className=\\"rating\\">
      ★☆☆☆☆
    </span>
  </div>
  <div className=\\"sub-title\\">
    <span>
      Hugo Beja - Praia Da Barra, PT
    </span>
  </div>
  <div className=\\"body\\">
    <p>
      I&#39;ve been patiently waiting for a miracle to happen with our order AU-316084, 12 Chairs!! First the delays, lots and lots of delays with no apparent reason... after they send just 1/2 of the order and say it&#39;s all... So we bought &#39;Pairs&#39; of chairs... we paid for 5 PAIRS and received 5 chairs!!! The other 2, the rocket chairs we never receive....
      Communication ZERO,
      they simply ignore the e - mails...when they did respond they asked us to prove our order to be pairs!!!LOL and just stopped communicating...their website is constantly down...probably to make lose interest and rest your forces to recover what you paid
      for !!
    </p>
  </div>
</div>"
`;

exports[`Comment renders mocks as expected for:  Justin Wright 1`] = `
"<div className=\\"Comment\\">
  <div className=\\"title\\">
    <span>
      Good Services
    </span>
    <span className=\\"rating\\">
      ★★★☆☆
    </span>
  </div>
  <div className=\\"sub-title\\">
    <span>
      Justin Wright - London, GB
    </span>
  </div>
  <div className=\\"body\\">
    <p>
      A decent place to introduce your taste buds to fiery Indian fare
    </p>
  </div>
</div>"
`;

exports[`Comment renders mocks as expected for:  Simon Lock 1`] = `
"<div className=\\"Comment\\">
  <div className=\\"title\\">
    <span>
      Super quality.. I will show here again!
    </span>
    <span className=\\"rating\\">
      ★★★★★
    </span>
  </div>
  <div className=\\"sub-title\\">
    <span>
      Simon Lock - Kolding
    </span>
  </div>
  <div className=\\"body\\">
    <p>
      Super nice quality, fast devilery, good prices. I will shop here again!
    </p>
  </div>
</div>"
`;
